tests/reject/inout_arg_newtype.ty
# An inout argument's &place must match the parameter's newtype identity. The param is
# `inout Id` but a raw `int` variable is passed by &y -- tychoc0 checked only that the arg
# was an &variable (is_eaddr), never its type, so it fail-opened where tychoc rejects.
# Both compilers must reject. (inout type-check at the call-argument position.)
type Id = int

fn f(x: inout Id):
    x = x

fn main():
    y : int = 1
    f(&y)
    println("unreachable")
